changed(margin-bottom): from fixed to calculated.
This fixes sidebar bottom getting messed up if announcementBar visibility changes, or height set to auto. I think one of the reason why annoucementBar height has been kept fixed was because of it's usage here. Now this changed to calculated height which announcementBar itself reports after mount.

--- a/packages/docusaurus-theme-classic/src/theme/DocSidebar/Desktop/Content/styles.module.css
+++ b/packages/docusaurus-theme-classic/src/theme/DocSidebar/Desktop/Content/styles.module.css
@@ -18,6 +18,6 @@
   }
 
   .menuWithAnnouncementBar {
-    margin-bottom: var(--docusaurus-announcement-bar-height);
+    margin-bottom: var(--docusaurus-announcement-bar-height-calculated, 0);
   }
 }
